finished: User Registration, and Generate Json Web Token (JWT) chapter